# MMDVMHost_ESP32

./: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  MMDVMHost_ESP32.c
main/http/: config_mmdvm_dmr.c  config_wifi_sta.c
main/include/: config.h  config_mmdvm_dmr.h  config_wifi_sta.h  nvs_read_write.h  soft_ap.h  station.h
main/nvs_rw/: nvs_read_write.c
main/wireless/: soft_ap.c  station.c
